tests/ui/const-generics/not_wf_param_in_rpitit.stderr
error[E0425]: cannot find value `bar` in this scope
  --> $DIR/not_wf_param_in_rpitit.rs:3:30
   |
LL | trait Trait<const N: Trait = bar> {
   |                              ^^^ not found in this scope

error[E0391]: cycle detected when computing predicates of `Trait`
  --> $DIR/not_wf_param_in_rpitit.rs:3:1
   |
LL | trait Trait<const N: Trait = bar> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires computing predicates of `Trait`...
  --> $DIR/not_wf_param_in_rpitit.rs:3:1
   |
LL | trait Trait<const N: Trait = bar> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing explicit predicates of `Trait`...
  --> $DIR/not_wf_param_in_rpitit.rs:3:1
   |
LL | trait Trait<const N: Trait = bar> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing explicit predicates of trait `Trait`...
  --> $DIR/not_wf_param_in_rpitit.rs:3:1
   |
LL | trait Trait<const N: Trait = bar> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing type of `Trait::N`...
  --> $DIR/not_wf_param_in_rpitit.rs:3:13
   |
LL | trait Trait<const N: Trait = bar> {
   |             ^^^^^^^^^^^^^^^^^^^^
note: ...which requires determining object safety of trait `Trait`...
  --> $DIR/not_wf_param_in_rpitit.rs:3:1
   |
LL | trait Trait<const N: Trait = bar> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires check whether the item has a `where Self: Sized` bound...
  --> $DIR/not_wf_param_in_rpitit.rs:6:5
   |
LL |     async fn a() {}
   |     ^^^^^^^^^^^^
   = note: ...which again requires computing predicates of `Trait`, completing the cycle
note: cycle used when checking that `Trait` is well-formed
  --> $DIR/not_wf_param_in_rpitit.rs:3:1
   |
LL | trait Trait<const N: Trait = bar> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0391, E0425.
For more information about an error, try `rustc --explain E0391`.
