tests/ui/const-generics/not_wf_param_in_rpitit.rs
//@ edition:2021

trait Trait<const N: Trait = bar> {
    //~^ ERROR: cannot find value `bar` in this scope
    //~| ERROR: cycle detected when computing predicates of `Trait`
    async fn a() {}
}

fn main() {}
